--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,24 @@
 @import 'normalize';
 @import 'grid';
 @import 'navbar';
+
+
+
+.pink {
+    background-color: pink;
+    height: 200px;
+}
+
+.orange {
+    background-color: orange;
+    height: 200px;
+}
+
+.yellow {
+    background-color: yellow;
+    height: 200px;
+}
+.red {
+    background-color: red;
+    height: 200px;
+}
