--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -529,6 +529,9 @@ template {
     display: block;
     text-align: left; } }
 
+button {
+  background-color: blue; }
+
 .pink {
   background-color: pink;
   height: 200px; }
