--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -303,6 +303,9 @@ template {
 [hidden] {
   display: none; }
 
+button {
+  background-color: blue; }
+
 .container {
   width: 90%;
   margin-left: auto;
@@ -486,64 +489,228 @@ template {
   .col-12-xl {
     width: 96%; } }
 
-.topnav {
-  overflow: hidden;
-  background-color: #333; }
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
+  @media only screen and (min-width: 540px) {
+    .container {
+      width: 85%; } }
+  @media only screen and (min-width: 768px) {
+    .container {
+      width: 80%; } }
+  @media only screen and (min-width: 960px) {
+    .container {
+      width: 75%; } }
+  @media only screen and (min-width: 1200px) {
+    .container {
+      width: 70%; } }
 
-.topnav a {
+.row {
+  position: relative;
+  width: 100%; }
+
+.row [class^="col"] {
   float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px; }
+  margin: 0.5rem 1%;
+  min-height: 0.125rem;
+  padding: 0 1%; }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black; }
+.row::after {
+  content: "";
+  display: table;
+  clear: both; }
 
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white; }
+.col {
+  width: 96%; }
 
-.topnav .icon {
-  display: none; }
+.col-1 {
+  width: 4.33333%; }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
+.col-2 {
+  width: 12.66667%; }
+
+.col-3 {
+  width: 21%; }
+
+.col-4 {
+  width: 29.33333%; }
+
+.col-5 {
+  width: 37.66667%; }
+
+.col-6 {
+  width: 46%; }
+
+.col-7 {
+  width: 54.33333%; }
+
+.col-8 {
+  width: 62.66667%; }
+
+.col-9 {
+  width: 71%; }
+
+.col-10 {
+  width: 79.33333%; }
+
+.col-11 {
+  width: 87.33333%; }
+
+.col-12 {
+  width: 96%; }
+
+@media only screen and (min-width: 540px) {
+  .col-sm {
+    width: 96%; }
+  .col-1-sm {
+    width: 4.33333%; }
+  .col-2-sm {
+    width: 12.66667%; }
+  .col-3-sm {
+    width: 21%; }
+  .col-4-sm {
+    width: 29.33333%; }
+  .col-5-sm {
+    width: 37.66667%; }
+  .col-6-sm {
+    width: 46%; }
+  .col-7-sm {
+    width: 54.33333%; }
+  .col-8-sm {
+    width: 62.66667%; }
+  .col-9-sm {
+    width: 71%; }
+  .col-10-sm {
+    width: 79.33333%; }
+  .col-11-sm {
+    width: 87.33333%; }
+  .col-12-sm {
+    width: 96%; } }
+
+@media only screen and (min-width: 768px) {
+  .col-md {
+    width: 96%; }
+  .col-1-md {
+    width: 4.33333%; }
+  .col-2-md {
+    width: 12.66667%; }
+  .col-3-md {
+    width: 21%; }
+  .col-4-md {
+    width: 29.33333%; }
+  .col-5-md {
+    width: 37.66667%; }
+  .col-6-md {
+    width: 46%; }
+  .col-7-md {
+    width: 54.33333%; }
+  .col-8-md {
+    width: 62.66667%; }
+  .col-9-md {
+    width: 71%; }
+  .col-10-md {
+    width: 79.33333%; }
+  .col-11-md {
+    width: 87.33333%; }
+  .col-12-md {
+    width: 96%; } }
+
+@media only screen and (min-width: 960px) {
+  .col-lg {
+    width: 96%; }
+  .col-1-lg {
+    width: 4.33333%; }
+  .col-2-lg {
+    width: 12.66667%; }
+  .col-3-lg {
+    width: 21%; }
+  .col-4-lg {
+    width: 29.33333%; }
+  .col-5-lg {
+    width: 37.66667%; }
+  .col-6-lg {
+    width: 46%; }
+  .col-7-lg {
+    width: 54.33333%; }
+  .col-8-lg {
+    width: 62.66667%; }
+  .col-9-lg {
+    width: 71%; }
+  .col-10-lg {
+    width: 79.33333%; }
+  .col-11-lg {
+    width: 87.33333%; }
+  .col-12-lg {
+    width: 96%; } }
+
+@media only screen and (min-width: 1200px) {
+  .col-xl {
+    width: 96%; }
+  .col-1-xl {
+    width: 4.33333%; }
+  .col-2-xl {
+    width: 12.66667%; }
+  .col-3-xl {
+    width: 21%; }
+  .col-4-xl {
+    width: 29.33333%; }
+  .col-5-xl {
+    width: 37.66667%; }
+  .col-6-xl {
+    width: 46%; }
+  .col-7-xl {
+    width: 54.33333%; }
+  .col-8-xl {
+    width: 62.66667%; }
+  .col-9-xl {
+    width: 71%; }
+  .col-10-xl {
+    width: 79.33333%; }
+  .col-11-xl {
+    width: 87.33333%; }
+  .col-12-xl {
+    width: 96%; } }
+
+.navbar {
+  background-color: #333;
+  padding: 15px; }
+  .navbar__header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+  .navbar__logo {
+    color: pink; }
+  .navbar__list {
     display: none; }
-  .topnav a.icon {
-    float: right;
-    display: block; } }
+  .navbar__link {
+    color: #f2f2f2;
+    text-align: left;
+    text-decoration: none;
+    font-size: 17px; }
+    .navbar__link--active {
+      background-color: #4CAF50;
+      color: white; }
+    .navbar__link:hover {
+      background-color: #ddd;
+      color: black; }
+  .navbar__button {
+    color: pink; }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative; }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0; }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left; } }
+.navbar.responsive .navbar__list {
+  display: flex;
+  flex-direction: column;
+  text-align: left; }
 
-button {
-  background-color: blue; }
-
-.pink {
-  background-color: pink;
-  height: 200px; }
-
-.orange {
-  background-color: orange;
-  height: 200px; }
-
-.yellow {
-  background-color: yellow;
-  height: 200px; }
-
-.red {
-  background-color: red;
-  height: 200px; }
+@media only screen and (min-width: 540px) {
+  .navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+    .navbar__button {
+      display: none; }
+    .navbar__list {
+      display: flex;
+      flex-direction: row; }
+    .navbar__link {
+      margin-right: 20px; } }
