--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -1,8 +1,13 @@
 @import './grid';
 
 .navbar {
-  background-color: #333;
-  padding: 15px;
+  background-color:#fff;
+  color: hotpink;
+  position: fixed;
+  padding: 15px 0;
+  width: 100%;
+  z-index: 99999999;
+  box-sizing: border-box;
 
   &__header {
     display: flex;
@@ -12,14 +17,16 @@
 
   &__logo {
     color: pink;
+    margin-left: 15px;
   }
 
   &__list {
     display: none;
+    padding:15px;
   }
 
   &__link {
-    color: #f2f2f2;
+    color:pink;
     text-align: left;
     text-decoration: none;
     font-size: 17px;
@@ -37,6 +44,7 @@
 
   &__button {
     color: pink;
+    margin-right: 15px;
   }
 }
 
@@ -45,11 +53,15 @@
   flex-direction: column;
   text-align: left;
 }
+
 @media only screen and (min-width: $bp-sm) {
   .navbar {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
+    padding: 15px;
+    margin: 0 auto;
 
     &__button {
       display: none;
