--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,4 +17,6 @@
 @import './pages/home';
 @import './pages/recipe';
 @import './pages/recipes';
+@import './pages/lifestyle';
+@import './pages/tdee';
 
