--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,7 @@
 @import './base/colours';
 @import './base/normalize';
 @import './base/typography';
+@import './base/general';
 
 @import './components/buttons';
 @import './components/slider';
@@ -19,4 +20,3 @@
 @import './pages/recipes';
 @import './pages/lifestyle';
 @import './pages/tdee';
-
