--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -304,8 +304,9 @@ template {
   display: none; }
 
 body {
-<<<<<<< HEAD
-  font-family: 'Karla', sans-serif; }
+  font-family: 'Karla', sans-serif;
+  color: #616770;
+  font-size: 16px; }
 
 h1,
 h2,
@@ -313,16 +314,29 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Rock Salt', cursive; }
-=======
-  font-family: 'Courier New', Courier, monospace; }
+  font-family: 'Prompt', sans-serif;
+  color: #616770; }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+h1 {
+  font-size: 2.5rem; }
 
-button {
-  background-color: blue; }
->>>>>>> 340cce4fdc005a602b7452539764097dd3691fe9
+h2 {
+  font-size: 2rem; }
+
+h3 {
+  font-size: 1.75rem; }
+
+h4 {
+  font-size: 1.5rem; }
+
+h5 {
+  font-size: 1.25rem; }
+
+h6 {
+  font-size: 1rem; }
+
+body {
+  min-height: 100vh; }
 
 .container {
   width: 90%;
@@ -331,7 +345,7 @@ button {
   @media only screen and (min-width: 540px) {
     .container {
       width: 90%; } }
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 769px) {
     .container {
       width: 90%; } }
   @media only screen and (min-width: 960px) {
@@ -423,190 +437,7 @@ button {
   .col-12-sm {
     width: 96%; } }
 
-@media only screen and (min-width: 768px) {
-  .col-md {
-    width: 96%; }
-  .col-1-md {
-    width: 4.33333%; }
-  .col-2-md {
-    width: 12.66667%; }
-  .col-3-md {
-    width: 21%; }
-  .col-4-md {
-    width: 29.33333%; }
-  .col-5-md {
-    width: 37.66667%; }
-  .col-6-md {
-    width: 46%; }
-  .col-7-md {
-    width: 54.33333%; }
-  .col-8-md {
-    width: 62.66667%; }
-  .col-9-md {
-    width: 71%; }
-  .col-10-md {
-    width: 79.33333%; }
-  .col-11-md {
-    width: 87.33333%; }
-  .col-12-md {
-    width: 96%; } }
-
-@media only screen and (min-width: 960px) {
-  .col-lg {
-    width: 96%; }
-  .col-1-lg {
-    width: 4.33333%; }
-  .col-2-lg {
-    width: 12.66667%; }
-  .col-3-lg {
-    width: 21%; }
-  .col-4-lg {
-    width: 29.33333%; }
-  .col-5-lg {
-    width: 37.66667%; }
-  .col-6-lg {
-    width: 46%; }
-  .col-7-lg {
-    width: 54.33333%; }
-  .col-8-lg {
-    width: 62.66667%; }
-  .col-9-lg {
-    width: 71%; }
-  .col-10-lg {
-    width: 79.33333%; }
-  .col-11-lg {
-    width: 87.33333%; }
-  .col-12-lg {
-    width: 96%; } }
-
-@media only screen and (min-width: 1200px) {
-  .col-xl {
-    width: 96%; }
-  .col-1-xl {
-    width: 4.33333%; }
-  .col-2-xl {
-    width: 12.66667%; }
-  .col-3-xl {
-    width: 21%; }
-  .col-4-xl {
-    width: 29.33333%; }
-  .col-5-xl {
-    width: 37.66667%; }
-  .col-6-xl {
-    width: 46%; }
-  .col-7-xl {
-    width: 54.33333%; }
-  .col-8-xl {
-    width: 62.66667%; }
-  .col-9-xl {
-    width: 71%; }
-  .col-10-xl {
-    width: 79.33333%; }
-  .col-11-xl {
-    width: 87.33333%; }
-  .col-12-xl {
-    width: 96%; } }
-
-.container {
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto; }
-  @media only screen and (min-width: 540px) {
-    .container {
-      width: 90%; } }
-  @media only screen and (min-width: 768px) {
-    .container {
-      width: 90%; } }
-  @media only screen and (min-width: 960px) {
-    .container {
-      width: 85%; } }
-  @media only screen and (min-width: 1200px) {
-    .container {
-      width: 80%; } }
-
-.row {
-  position: relative;
-  width: 100%; }
-
-.row [class^="col"] {
-  float: left;
-  margin: 0.5rem 1%;
-  min-height: 0.125rem;
-  padding: 0 1%; }
-
-.row::after {
-  content: "";
-  display: table;
-  clear: both; }
-
-.col {
-  width: 96%; }
-
-.col-1 {
-  width: 4.33333%; }
-
-.col-2 {
-  width: 12.66667%; }
-
-.col-3 {
-  width: 21%; }
-
-.col-4 {
-  width: 29.33333%; }
-
-.col-5 {
-  width: 37.66667%; }
-
-.col-6 {
-  width: 46%; }
-
-.col-7 {
-  width: 54.33333%; }
-
-.col-8 {
-  width: 62.66667%; }
-
-.col-9 {
-  width: 71%; }
-
-.col-10 {
-  width: 79.33333%; }
-
-.col-11 {
-  width: 87.33333%; }
-
-.col-12 {
-  width: 96%; }
-
-@media only screen and (min-width: 540px) {
-  .col-sm {
-    width: 96%; }
-  .col-1-sm {
-    width: 4.33333%; }
-  .col-2-sm {
-    width: 12.66667%; }
-  .col-3-sm {
-    width: 21%; }
-  .col-4-sm {
-    width: 29.33333%; }
-  .col-5-sm {
-    width: 37.66667%; }
-  .col-6-sm {
-    width: 46%; }
-  .col-7-sm {
-    width: 54.33333%; }
-  .col-8-sm {
-    width: 62.66667%; }
-  .col-9-sm {
-    width: 71%; }
-  .col-10-sm {
-    width: 79.33333%; }
-  .col-11-sm {
-    width: 87.33333%; }
-  .col-12-sm {
-    width: 96%; } }
-
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 769px) {
   .col-md {
     width: 96%; }
   .col-1-md {
@@ -744,36 +575,305 @@ button {
     .navbar__link {
       margin-right: 20px; } }
 
-<<<<<<< HEAD
-.homeSection {
-  height: 100vh; }
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
+  @media only screen and (min-width: 540px) {
+    .container {
+      width: 90%; } }
+  @media only screen and (min-width: 769px) {
+    .container {
+      width: 90%; } }
+  @media only screen and (min-width: 960px) {
+    .container {
+      width: 85%; } }
+  @media only screen and (min-width: 1200px) {
+    .container {
+      width: 80%; } }
+
+.row {
+  position: relative;
+  width: 100%; }
+
+.row [class^="col"] {
+  float: left;
+  margin: 0.5rem 1%;
+  min-height: 0.125rem;
+  padding: 0 1%; }
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.col {
+  width: 96%; }
+
+.col-1 {
+  width: 4.33333%; }
+
+.col-2 {
+  width: 12.66667%; }
+
+.col-3 {
+  width: 21%; }
+
+.col-4 {
+  width: 29.33333%; }
+
+.col-5 {
+  width: 37.66667%; }
+
+.col-6 {
+  width: 46%; }
+
+.col-7 {
+  width: 54.33333%; }
+
+.col-8 {
+  width: 62.66667%; }
+
+.col-9 {
+  width: 71%; }
+
+.col-10 {
+  width: 79.33333%; }
+
+.col-11 {
+  width: 87.33333%; }
+
+.col-12 {
+  width: 96%; }
+
+@media only screen and (min-width: 540px) {
+  .col-sm {
+    width: 96%; }
+  .col-1-sm {
+    width: 4.33333%; }
+  .col-2-sm {
+    width: 12.66667%; }
+  .col-3-sm {
+    width: 21%; }
+  .col-4-sm {
+    width: 29.33333%; }
+  .col-5-sm {
+    width: 37.66667%; }
+  .col-6-sm {
+    width: 46%; }
+  .col-7-sm {
+    width: 54.33333%; }
+  .col-8-sm {
+    width: 62.66667%; }
+  .col-9-sm {
+    width: 71%; }
+  .col-10-sm {
+    width: 79.33333%; }
+  .col-11-sm {
+    width: 87.33333%; }
+  .col-12-sm {
+    width: 96%; } }
+
+@media only screen and (min-width: 769px) {
+  .col-md {
+    width: 96%; }
+  .col-1-md {
+    width: 4.33333%; }
+  .col-2-md {
+    width: 12.66667%; }
+  .col-3-md {
+    width: 21%; }
+  .col-4-md {
+    width: 29.33333%; }
+  .col-5-md {
+    width: 37.66667%; }
+  .col-6-md {
+    width: 46%; }
+  .col-7-md {
+    width: 54.33333%; }
+  .col-8-md {
+    width: 62.66667%; }
+  .col-9-md {
+    width: 71%; }
+  .col-10-md {
+    width: 79.33333%; }
+  .col-11-md {
+    width: 87.33333%; }
+  .col-12-md {
+    width: 96%; } }
+
+@media only screen and (min-width: 960px) {
+  .col-lg {
+    width: 96%; }
+  .col-1-lg {
+    width: 4.33333%; }
+  .col-2-lg {
+    width: 12.66667%; }
+  .col-3-lg {
+    width: 21%; }
+  .col-4-lg {
+    width: 29.33333%; }
+  .col-5-lg {
+    width: 37.66667%; }
+  .col-6-lg {
+    width: 46%; }
+  .col-7-lg {
+    width: 54.33333%; }
+  .col-8-lg {
+    width: 62.66667%; }
+  .col-9-lg {
+    width: 71%; }
+  .col-10-lg {
+    width: 79.33333%; }
+  .col-11-lg {
+    width: 87.33333%; }
+  .col-12-lg {
+    width: 96%; } }
+
+@media only screen and (min-width: 1200px) {
+  .col-xl {
+    width: 96%; }
+  .col-1-xl {
+    width: 4.33333%; }
+  .col-2-xl {
+    width: 12.66667%; }
+  .col-3-xl {
+    width: 21%; }
+  .col-4-xl {
+    width: 29.33333%; }
+  .col-5-xl {
+    width: 37.66667%; }
+  .col-6-xl {
+    width: 46%; }
+  .col-7-xl {
+    width: 54.33333%; }
+  .col-8-xl {
+    width: 62.66667%; }
+  .col-9-xl {
+    width: 71%; }
+  .col-10-xl {
+    width: 79.33333%; }
+  .col-11-xl {
+    width: 87.33333%; }
+  .col-12-xl {
+    width: 96%; } }
 
 .homeSection--first {
-  background-color: #bbdae7;
-  text-align: center;
-  padding-top: 100px; }
+  padding: 150px 0 100px;
+  overflow-x: hidden; }
 
-.homeSection--second {
-  background-color: #0EC99D; }
+.hero__wrapper {
+  background-color: #ebf1f0;
+  min-height: 450px; }
 
-.homeSection--third {
-  background-color: #ebf1f0; }
+.hero__title {
+  font-size: 3rem;
+  text-align: left;
+  padding: 0 1rem;
+  margin: 1rem 0;
+  color: #616770;
+  font-weight: bold;
+  max-width: 80%; }
 
-.homeSection--fourth {
-  background-color: #9562b6; }
+.hero__button {
+  text-transform: uppercase;
+  font-size: 1rem;
+  padding: 0.8rem;
+  background-color: #0EC99D;
+  color: #fff;
+  border: none;
+  display: block;
+  margin: 3rem 0 3rem 30%; }
+  .hero__button:hover {
+    background-color: #9562b6;
+    cursor: pointer; }
 
-h1 {
-  text-align: center; }
+.hero__button-icon {
+  padding-left: 1rem; }
 
 .hero__left {
-  background-color: #FFC0CB; }
+  position: relative; }
+
+.hero__img-wrapper {
+  max-width: 100vw; }
 
 .hero__img {
-  max-width: 60%; }
-=======
+  max-width: 350px;
+  margin-left: 33%; }
+
+@media only screen and (min-width: 540px) {
+  .hero__title {
+    max-width: 60%; }
+  .hero__button {
+    margin: 4rem auto; }
+  .hero__img-wrapper {
+    max-width: none; }
+  .hero__img {
+    max-width: none;
+    width: 80%;
+    margin-left: 35%; } }
+
+@media only screen and (min-width: 769px) {
+  .hero__title {
+    font-size: 4rem; }
+  .hero__wrapper {
+    min-height: 600px; }
+  .hero__main-row {
+    margin-left: 15%; }
+  .hero__button {
+    margin: 6rem 0 3rem 1rem; }
+  .hero__img {
+    width: 70%;
+    margin-left: -15%; } }
+
+@media only screen and (min-width: 960px) {
+  .hero__title {
+    margin-left: -15%; }
+  .hero__button {
+    margin: 6rem 0 3rem 1rem; }
+  .hero__main-row {
+    margin-left: 10%; }
+  .hero__img {
+    width: 70%;
+    margin-top: -5%;
+    margin-left: 35%; } }
+
+@media only screen and (min-width: 1200px) {
+  .hero__main-row {
+    margin-left: 20%; }
+  .hero__title {
+    max-width: 40%;
+    font-size: 4.5rem;
+    margin-left: -8%; }
+  .hero__img {
+    width: 50%;
+    margin-top: -8%;
+    margin-left: 35%; } }
+
+.three-block__title {
+  text-align: center;
+  color: #616770; }
+
+.three-block__box--first {
+  background: linear-gradient(40deg, #bbdae7 60%, #ebf1f0 40%); }
+
+.three-block__box--second {
+  background: linear-gradient(323deg, #bbdae7 60%, #ebf1f0 40%); }
+
+.three-block__box--third {
+  background: linear-gradient(38deg, #bbdae7 60%, #ebf1f0 40%); }
+
+.three-block__subtitle {
+  padding: 20px 0 10px 10px; }
+
+.three-block__text {
+  padding: 0 15px 10px; }
+
+.gallery img {
+  max-width: 100%; }
+
 .blog__text {
   color: #000;
   font-size: 14px; }
   .blog__text--green {
-    color: blue; }
->>>>>>> 340cce4fdc005a602b7452539764097dd3691fe9
+    color: #9562b6; }
