--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,5 +1,9 @@
+@import './colours';
+
 body {
   font-family: 'Karla', sans-serif;
+  color: $font;
+  font-size: 16px;
 }
 
 h1,
@@ -8,6 +12,25 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Rock Salt', cursive;
-  // font-family: 'Delius Swash Caps', cursive;
+  font-family: 'Prompt', sans-serif;
+  color: $font;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.75rem;
+}
+h4 {
+  font-size: 1.5rem;
+}
+h5 {
+  font-size: 1.25rem;
+}
+h6 {
+  font-size: 1rem;
 }
