--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -523,12 +523,19 @@ body {
 
 .navbar {
   background-color: #fff;
-  color: hotpink;
+  -webkit-transition: background-color .5s;
+  /* For Safari 3.1 to 6.0 */
+  transition: background-color .5s;
   position: fixed;
   padding: 15px 0;
   width: 100%;
   z-index: 99999999;
   box-sizing: border-box; }
+  .navbar--scrolled {
+    background-color: #bbdae7;
+    -webkit-transition: background-color .5s;
+    /* For Safari 3.1 to 6.0 */
+    transition: background-color .5s; }
   .navbar__header {
     display: flex;
     flex-direction: row;
@@ -540,16 +547,17 @@ body {
     display: none;
     padding: 15px; }
   .navbar__link {
-    color: pink;
+    color: #616770;
     text-align: left;
     text-decoration: none;
+    padding: 5px;
     font-size: 17px; }
     .navbar__link--active {
-      background-color: #4CAF50;
+      background-color: #0EC99D;
       color: white; }
     .navbar__link:hover {
-      background-color: #ddd;
-      color: black; }
+      background-color: #0EC99D;
+      color: white; }
   .navbar__button {
     color: pink;
     margin-right: 15px; }
