--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -4,6 +4,7 @@ body {
   font-family: 'Karla', sans-serif;
   color: $font;
   font-size: 16px;
+  line-height: 1.5;
 }
 
 h1,
@@ -17,20 +18,20 @@ h6 {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 h2 {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 h3 {
-  font-size: 1.75rem;
+  font-size: 2rem;
 }
 h4 {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
 }
 h5 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
 }
 h6 {
-  font-size: 1rem;
+  font-size: 1.25rem;
 }
