--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -1,19 +1,21 @@
 @import '../base/colours';
 
 .navbar {
-background-color: #fff;
--webkit-transition:   background-color .5s; /* For Safari 3.1 to 6.0 */
-transition:   background-color .5s;
+  background-color: #fff;
+  /* For Safari 3.1 to 6.0 */
+  -webkit-transition: background-color 0.5s;
+  transition: background-color 0.5s;
   position: fixed;
   padding: 15px 0;
   width: 100%;
   z-index: 99999999;
   box-sizing: border-box;
 
-  &--scrolled{
-      background-color:$PowderBlue;
-      -webkit-transition:   background-color .5s; /* For Safari 3.1 to 6.0 */
-transition:   background-color .5s;
+  &--scrolled {
+    background-color: $PowderBlue;
+    /* For Safari 3.1 to 6.0 */
+    -webkit-transition: background-color 0.5s;
+    transition: background-color 0.5s;
   }
 
   &__header {
@@ -29,7 +31,7 @@ transition:   background-color .5s;
 
   &__list {
     display: none;
-    padding:15px;
+    padding: 15px;
   }
 
   &__link {
@@ -61,7 +63,6 @@ transition:   background-color .5s;
   flex-direction: column;
   text-align: left;
 }
-
 @media only screen and (min-width: $bp-sm) {
   .navbar {
     display: flex;
