Added some styling, replaced dummy text

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1013,6 +1013,9 @@ body {
   .about__image {
     width: 70%; } }
 
+.about p {
+  justify-content: center; }
+
 .container {
   width: 90%;
   margin-left: auto;
