--- a/src/css/leaneating.css
+++ b/src/css/leaneating.css
@@ -15,6 +15,7 @@ h1{
 }
 .rule_1{
     padding-right: 10%;
+    padding-left: 10%;
 }
 .text1{
     padding-right: 50%;
@@ -27,7 +28,8 @@ h1{
     padding-left: 20%;
 }
 .rule_2{
-    padding-left: 3%;
+    padding-right: 10%;
+    padding-left: 10%;
     padding-bottom: 5%;
 }
 .trackimage{
@@ -37,41 +39,50 @@ h1{
     padding-right: 50px;
 }
 .rule_3{
+padding-left: 10%;
+padding-right: 10%;
+padding-bottom: 4%;
+}
 
+.rule_4{
+    padding-left: 10%;
 }
 
 .plateimage{
     float: right;
     border-radius: 10px;
     padding-bottom: 30px;
-    padding-left: 8%;
+    padding-left: 6%;
+    padding-right: 10%;
 }
 .rule_5{
-    padding right: 15%;
+    padding right: 10%;
     padding-bottom: 6%;
 
 }
 .veggiesfirst{
     float: left;
-    padding-right: 10%;
-    padding-left:5%;
+    padding-left: 10%;
+    padding-right: 3%;
     padding-top:3%;
     border-radius: 10px;
 }
 .rule_6{
     padding-bottom: 10%;
+    padding-left: 10%;
 
 }
 .proteinimage{
     float: right;
     padding-bottom: 30px;
-    padding-left: 10%;
+    padding-right: 10%;
     padding-top:8%;
     padding-left: 3%;
     border-radius: 10px;
 }
 .rule_7{
-    padding-left: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
 
 }
 .nofizzies{
@@ -79,14 +90,16 @@ h1{
     padding-right: 10%;
     padding-right: 5%;
     border-radius: 10px;
+    padding-top: 4%;
+}
+
+.rule_8{
+    padding-left: 10%;
+    padding-right: 10%;
 }
 .author{
     text-align: center;
 }
 .img{
     border-radius: 8px;
-    border-style: groove;
-    border-radius: 5px;
-    border-left-width: 10%;
-    border-color: #0EC99D;
 }
