--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1016,6 +1016,48 @@ body {
 .about p {
   justify-content: center; }
 
+.contact {
+  padding: 150px 0; }
+  .contact__title {
+    justify-content: center;
+    text-align: center; }
+  .contact__text {
+    justify-content: center;
+    text-align: left; }
+
+input[type=text], input[type=email], select, textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #698080;
+  border-radius: 10px;
+  box-sizing: border-box;
+  margin-top: 10px;
+  margin-bottom: 16px;
+  resize: vertical; }
+
+input[type=submit] {
+  background-color: #1e28be;
+  color: white;
+  padding: 20px 36px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer; }
+
+input[type=submit]:hover {
+  background-color: #45a049; }
+
+.container {
+  justify-content: center;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  margin-top: 100px; }
+
+#map {
+  height: 500px;
+  width: 40%;
+  float: right; }
+
 .container {
   width: 90%;
   margin-left: auto;
