--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,4 +18,4 @@
 @import './pages/recipe';
 @import './pages/recipes';
 @import './pages/lifestyle';
-@import './pages/tdee';
+@import './pages/calculator';
