--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,11 +12,13 @@
 @import './layout/header';
 @import './layout/navbar';
 
-
 @import './pages/about';
+@import './pages/beachbod';
 @import './pages/contact';
 @import './pages/home';
+@import './pages/leaneating';
 @import './pages/recipe';
 @import './pages/recipes';
+@import './pages/staples';
 @import './pages/lifestyle';
 @import './pages/tdee';
