--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -339,6 +339,13 @@ h6 {
 body {
   min-height: 100vh; }
 
+.clearfix:after {
+  content: ".";
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both; }
+
 .container {
   width: 90%;
   margin-left: auto;
@@ -796,6 +803,67 @@ body {
     .navbar__link {
       margin-right: 20px; } }
 
+section {
+  padding-left: 4%;
+  padding-right: 4%; }
+
+h1 {
+  text-align: center;
+  color: white; }
+
+.intro {
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif; }
+
+.point1 {
+  padding-left: 10%; }
+
+.weights {
+  float: right;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 4%;
+  padding-bottom: 3%;
+  border-radius: 8px 8px 8px 8px; }
+
+.BeachBod {
+  background-image: url("../Images/gym.jpg");
+  background-size: 100%;
+  color: white; }
+
+.point2 {
+  padding-left: 8%;
+  padding-right: 10%;
+  padding-top: 2%; }
+
+.increasing_reps {
+  float: left;
+  padding-top: 8%;
+  padding-right: 10%;
+  border-radius: 8px; }
+
+.point3 {
+  padding-left: 10%;
+  padding-top: 5%; }
+
+.improve_technique {
+  float: right;
+  padding-right: 10%;
+  padding-top: 4%;
+  padding-left: 8%;
+  padding-bottom: 3%;
+  border-radius: 20px; }
+
+.point4 {
+  text-align: center;
+  border-style: groove;
+  border-radius: 5px;
+  border-left-width: 10%;
+  border-color: #0EC99D; }
+
+.author {
+  text-align: center; }
+
 .container {
   width: 90%;
   margin-left: auto;
@@ -1182,8 +1250,597 @@ body {
   .intro__text {
     max-width: 50%; } }
 
+section {
+  padding-left: 5%;
+  padding-right: 5%; }
+
+h1 {
+  text-align: center; }
+
+.intro {
+  text-align: center;
+  border-style: groove;
+  border-radius: 5px;
+  border-left-width: 10%;
+  border-color: #0EC99D;
+  font-family: Verdana, Geneva, Tahoma, sans-serif; }
+
+.rule_1 {
+  padding-right: 10%;
+  padding-left: 10%; }
+
+.text1 {
+  padding-right: 50%;
+  padding-left: 20px; }
+
+.rule_1_img {
+  float: right;
+  border-radius: 10px;
+  padding-bottom: 5%;
+  padding-left: 20%; }
+
+.rule_2 {
+  padding-right: 10%;
+  padding-left: 10%;
+  padding-bottom: 5%; }
+
+.trackimage {
+  float: left;
+  border-radius: 10px;
+  padding-bottom: 30px;
+  padding-right: 50px; }
+
+.rule_3 {
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 4%; }
+
+.rule_4 {
+  padding-left: 10%; }
+
+.plateimage {
+  float: right;
+  border-radius: 10px;
+  padding-bottom: 30px;
+  padding-left: 6%;
+  padding-right: 10%; }
+
+.rule_5 {
+  padding: 10% 10% 6%; }
+
+.veggiesfirst {
+  float: left;
+  padding-left: 10%;
+  padding-right: 3%;
+  padding-top: 3%;
+  border-radius: 10px; }
+
+.rule_6 {
+  padding-bottom: 10%;
+  padding-left: 10%; }
+
+.proteinimage {
+  float: right;
+  padding: 8% 10% 30px 3%;
+  border-radius: 10px; }
+
+.rule_7 {
+  padding-left: 10%;
+  padding-right: 10%; }
+
+.nofizzies {
+  float: left;
+  padding-right: 10%;
+  padding-right: 5%;
+  border-radius: 10px;
+  padding-top: 4%; }
+
+.rule_8 {
+  padding-left: 10%;
+  padding-right: 10%; }
+
+.author {
+  text-align: center; }
+
+.img {
+  border-radius: 8px; }
+
+body {
+  min-height: 100vh; }
+
+.clearfix:after {
+  content: ".";
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both; }
+
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
+  @media only screen and (min-width: 540px) {
+    .container {
+      width: 90%; } }
+  @media only screen and (min-width: 769px) {
+    .container {
+      width: 90%; } }
+  @media only screen and (min-width: 960px) {
+    .container {
+      width: 85%; } }
+  @media only screen and (min-width: 1200px) {
+    .container {
+      width: 80%; } }
+
+.row {
+  position: relative;
+  width: 100%; }
+
+.row [class^="col"] {
+  float: left;
+  margin: 0.5rem 1%;
+  min-height: 0.125rem;
+  padding: 0 1%; }
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.col {
+  width: 96%; }
+
+.col-1 {
+  width: 4.33333%; }
+
+.col-2 {
+  width: 12.66667%; }
+
+.col-3 {
+  width: 21%; }
+
+.col-4 {
+  width: 29.33333%; }
+
+.col-5 {
+  width: 37.66667%; }
+
+.col-6 {
+  width: 46%; }
+
+.col-7 {
+  width: 54.33333%; }
+
+.col-8 {
+  width: 62.66667%; }
+
+.col-9 {
+  width: 71%; }
+
+.col-10 {
+  width: 79.33333%; }
+
+.col-11 {
+  width: 87.33333%; }
+
+.col-12 {
+  width: 96%; }
+
+@media only screen and (min-width: 540px) {
+  .col-sm {
+    width: 96%; }
+  .col-1-sm {
+    width: 4.33333%; }
+  .col-2-sm {
+    width: 12.66667%; }
+  .col-3-sm {
+    width: 21%; }
+  .col-4-sm {
+    width: 29.33333%; }
+  .col-5-sm {
+    width: 37.66667%; }
+  .col-6-sm {
+    width: 46%; }
+  .col-7-sm {
+    width: 54.33333%; }
+  .col-8-sm {
+    width: 62.66667%; }
+  .col-9-sm {
+    width: 71%; }
+  .col-10-sm {
+    width: 79.33333%; }
+  .col-11-sm {
+    width: 87.33333%; }
+  .col-12-sm {
+    width: 96%; } }
+
+@media only screen and (min-width: 769px) {
+  .col-md {
+    width: 96%; }
+  .col-1-md {
+    width: 4.33333%; }
+  .col-2-md {
+    width: 12.66667%; }
+  .col-3-md {
+    width: 21%; }
+  .col-4-md {
+    width: 29.33333%; }
+  .col-5-md {
+    width: 37.66667%; }
+  .col-6-md {
+    width: 46%; }
+  .col-7-md {
+    width: 54.33333%; }
+  .col-8-md {
+    width: 62.66667%; }
+  .col-9-md {
+    width: 71%; }
+  .col-10-md {
+    width: 79.33333%; }
+  .col-11-md {
+    width: 87.33333%; }
+  .col-12-md {
+    width: 96%; } }
+
+@media only screen and (min-width: 960px) {
+  .col-lg {
+    width: 96%; }
+  .col-1-lg {
+    width: 4.33333%; }
+  .col-2-lg {
+    width: 12.66667%; }
+  .col-3-lg {
+    width: 21%; }
+  .col-4-lg {
+    width: 29.33333%; }
+  .col-5-lg {
+    width: 37.66667%; }
+  .col-6-lg {
+    width: 46%; }
+  .col-7-lg {
+    width: 54.33333%; }
+  .col-8-lg {
+    width: 62.66667%; }
+  .col-9-lg {
+    width: 71%; }
+  .col-10-lg {
+    width: 79.33333%; }
+  .col-11-lg {
+    width: 87.33333%; }
+  .col-12-lg {
+    width: 96%; } }
+
+@media only screen and (min-width: 1200px) {
+  .col-xl {
+    width: 96%; }
+  .col-1-xl {
+    width: 4.33333%; }
+  .col-2-xl {
+    width: 12.66667%; }
+  .col-3-xl {
+    width: 21%; }
+  .col-4-xl {
+    width: 29.33333%; }
+  .col-5-xl {
+    width: 37.66667%; }
+  .col-6-xl {
+    width: 46%; }
+  .col-7-xl {
+    width: 54.33333%; }
+  .col-8-xl {
+    width: 62.66667%; }
+  .col-9-xl {
+    width: 71%; }
+  .col-10-xl {
+    width: 79.33333%; }
+  .col-11-xl {
+    width: 87.33333%; }
+  .col-12-xl {
+    width: 96%; } }
+
+.staples {
+  margin-top: 100px; }
+  .staples__conclusion {
+    max-width: 80%;
+    text-align: center;
+    margin: 100px auto 50px; }
+
+.textBox {
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 5%;
+  padding-right: 5%;
+  border-style: groove;
+  border-radius: 5px;
+  border-color: #0EC99D;
+  margin-bottom: 20px; }
+  .textBox__title {
+    text-align: center;
+    color: #616770;
+    margin-top: 0px; }
+
+.pantry {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  display: block; }
+  .pantry__title {
+    text-align: center;
+    margin-bottom: 25px; }
+  .pantry__img {
+    border-radius: 5px;
+    max-width: 90%;
+    display: block;
+    margin: 0 auto 20px; }
+
+@media only screen and (min-width: 540px) {
+  .pantry {
+    margin-bottom: 100px;
+    display: block; }
+    .pantry__title {
+      margin-bottom: 50px; }
+    .pantry__img {
+      border-radius: 5px;
+      max-width: 45%; }
+      .pantry__img--left {
+        float: left; }
+      .pantry__img--right {
+        float: right; }
+    .pantry__text {
+      max-width: 50%;
+      padding: 0px; }
+      .pantry__text--right {
+        float: right; }
+      .pantry__text--left {
+        float: left; } }
+
+@media only screen and (min-width: 1200px) {
+  .textBox {
+    display: block;
+    max-width: 70%;
+    margin: 0 auto; }
+  .pantry {
+    max-width: 70%;
+    margin: 100px auto; }
+    .pantry__img {
+      max-width: 40%; } }
+
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
+  @media only screen and (min-width: 540px) {
+    .container {
+      width: 90%; } }
+  @media only screen and (min-width: 769px) {
+    .container {
+      width: 90%; } }
+  @media only screen and (min-width: 960px) {
+    .container {
+      width: 85%; } }
+  @media only screen and (min-width: 1200px) {
+    .container {
+      width: 80%; } }
+
+.row {
+  position: relative;
+  width: 100%; }
+
+.row [class^="col"] {
+  float: left;
+  margin: 0.5rem 1%;
+  min-height: 0.125rem;
+  padding: 0 1%; }
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.col {
+  width: 96%; }
+
+.col-1 {
+  width: 4.33333%; }
+
+.col-2 {
+  width: 12.66667%; }
+
+.col-3 {
+  width: 21%; }
+
+.col-4 {
+  width: 29.33333%; }
+
+.col-5 {
+  width: 37.66667%; }
+
+.col-6 {
+  width: 46%; }
+
+.col-7 {
+  width: 54.33333%; }
+
+.col-8 {
+  width: 62.66667%; }
+
+.col-9 {
+  width: 71%; }
+
+.col-10 {
+  width: 79.33333%; }
+
+.col-11 {
+  width: 87.33333%; }
+
+.col-12 {
+  width: 96%; }
+
+@media only screen and (min-width: 540px) {
+  .col-sm {
+    width: 96%; }
+  .col-1-sm {
+    width: 4.33333%; }
+  .col-2-sm {
+    width: 12.66667%; }
+  .col-3-sm {
+    width: 21%; }
+  .col-4-sm {
+    width: 29.33333%; }
+  .col-5-sm {
+    width: 37.66667%; }
+  .col-6-sm {
+    width: 46%; }
+  .col-7-sm {
+    width: 54.33333%; }
+  .col-8-sm {
+    width: 62.66667%; }
+  .col-9-sm {
+    width: 71%; }
+  .col-10-sm {
+    width: 79.33333%; }
+  .col-11-sm {
+    width: 87.33333%; }
+  .col-12-sm {
+    width: 96%; } }
+
+@media only screen and (min-width: 769px) {
+  .col-md {
+    width: 96%; }
+  .col-1-md {
+    width: 4.33333%; }
+  .col-2-md {
+    width: 12.66667%; }
+  .col-3-md {
+    width: 21%; }
+  .col-4-md {
+    width: 29.33333%; }
+  .col-5-md {
+    width: 37.66667%; }
+  .col-6-md {
+    width: 46%; }
+  .col-7-md {
+    width: 54.33333%; }
+  .col-8-md {
+    width: 62.66667%; }
+  .col-9-md {
+    width: 71%; }
+  .col-10-md {
+    width: 79.33333%; }
+  .col-11-md {
+    width: 87.33333%; }
+  .col-12-md {
+    width: 96%; } }
+
+@media only screen and (min-width: 960px) {
+  .col-lg {
+    width: 96%; }
+  .col-1-lg {
+    width: 4.33333%; }
+  .col-2-lg {
+    width: 12.66667%; }
+  .col-3-lg {
+    width: 21%; }
+  .col-4-lg {
+    width: 29.33333%; }
+  .col-5-lg {
+    width: 37.66667%; }
+  .col-6-lg {
+    width: 46%; }
+  .col-7-lg {
+    width: 54.33333%; }
+  .col-8-lg {
+    width: 62.66667%; }
+  .col-9-lg {
+    width: 71%; }
+  .col-10-lg {
+    width: 79.33333%; }
+  .col-11-lg {
+    width: 87.33333%; }
+  .col-12-lg {
+    width: 96%; } }
+
+@media only screen and (min-width: 1200px) {
+  .col-xl {
+    width: 96%; }
+  .col-1-xl {
+    width: 4.33333%; }
+  .col-2-xl {
+    width: 12.66667%; }
+  .col-3-xl {
+    width: 21%; }
+  .col-4-xl {
+    width: 29.33333%; }
+  .col-5-xl {
+    width: 37.66667%; }
+  .col-6-xl {
+    width: 46%; }
+  .col-7-xl {
+    width: 54.33333%; }
+  .col-8-xl {
+    width: 62.66667%; }
+  .col-9-xl {
+    width: 71%; }
+  .col-10-xl {
+    width: 79.33333%; }
+  .col-11-xl {
+    width: 87.33333%; }
+  .col-12-xl {
+    width: 96%; } }
+
+.h1 {
+  text-align: center; }
+
 .blog__text {
   color: #000;
   font-size: 14px; }
   .blog__text--green {
     color: #9562b6; }
+
+@media only screen and (min-width: 540px) {
+  .hero__title {
+    max-width: 60%; }
+  .hero__button {
+    margin: 4rem auto; }
+  .hero__img-wrapper {
+    max-width: none; }
+  .hero__img {
+    max-width: none;
+    width: 80%;
+    margin-left: 35%; } }
+
+@media only screen and (min-width: 769px) {
+  .hero__title {
+    font-size: 4rem; }
+  .hero__wrapper {
+    min-height: 600px; }
+  .hero__main-row {
+    margin-left: 15%; }
+  .hero__button {
+    margin: 6rem 0 3rem 1rem; }
+  .hero__img {
+    width: 70%;
+    margin-left: -15%; } }
+
+@media only screen and (min-width: 960px) {
+  .hero__title {
+    margin-left: -15%; }
+  .hero__button {
+    margin: 6rem 0 3rem 1rem; }
+  .hero__main-row {
+    margin-left: 10%; }
+  .hero__img {
+    width: 70%;
+    margin-top: -5%;
+    margin-left: 35%; } }
+
+@media only screen and (min-width: 1200px) {
+  .hero__main-row {
+    margin-left: 20%; }
+  .hero__title {
+    max-width: 40%;
+    font-size: 4.5rem;
+    margin-left: -8%; }
+  .hero__img {
+    width: 50%;
+    margin-top: -8%;
+    margin-left: 35%; } }
