--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -1,3 +1,11 @@
 body {
   min-height: 100vh;
 }
+
+.clearfix:after {
+   content: ".";
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+}
