--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,8 @@
 
 @import './components/buttons';
 @import './components/slider';
+@import './components/textBox';
+@import './components/paragraph';
 
 @import './layout/footer';
 @import './layout/forms';
@@ -21,4 +23,5 @@
 @import './pages/recipes';
 @import './pages/staples';
 @import './pages/lifestyle';
+@import './pages/mythsbusted';
 @import './pages/tdee';
