--- a/src/scss/pages/_staples.scss
+++ b/src/scss/pages/_staples.scss
@@ -1,9 +1,11 @@
 @import '../base/colours';
 @import '../base/general';
 @import '../layout/grid';
+@import '../components/textBox';
 
 .staples {
   margin-top: 100px;
+
   &__conclusion {
     max-width: 80%;
     text-align: center;
@@ -11,84 +13,65 @@
   }
 }
 
-.textBox {
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 5%;
-    padding-right: 5%;
-    border-style:groove;
+.pantry {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  display: block;
+
+  &__title {
+    text-align: center;
+    margin-bottom: 25px;
+  }
+
+  &__img {
     border-radius: 5px;
-    border-color: $CaribbeanGreen;
-    margin-bottom: 20px;
-
-    &__title {
-      text-align: center;
-      color: $font;
-      margin-top: 0px;
-    }
-}
-
-
-.pantry{
-    margin-top: 100px;
-    margin-bottom: 100px;
+    max-width: 90%;
     display: block;
-
-    &__title {
-      text-align: center;
-        margin-bottom: 25px;
-
-    }
-
-    &__img{
-          border-radius: 5px;
-          max-width: 90%;
-          display: block;
-          margin: 0 auto 20px;
-    }
+    margin: 0 auto 20px;
+  }
 }
 
 @media only screen and (min-width: $bp-sm) {
-  .pantry{
-      margin-bottom: 100px;
-      display: block;
+  .pantry {
+    margin-bottom: 100px;
 
-      &__title {
-        margin-bottom: 50px;
+    &__title {
+      margin-bottom: 50px;
+    }
+
+    &__img {
+      border-radius: 5px;
+      max-width: 45%;
+
+      &--left {
+        float: left;
       }
 
-      &__img{
-            border-radius: 5px;
-            max-width: 45%;
-            &--left {
-              float: left;
-            }
-            &--right {
-              float: right;
-            }
+      &--right {
+        float: right;
       }
-      &__text {
-        max-width: 50%;
-        padding: 0px;
-        &--right {
-          float: right;
-        }
-        &--left {
-          float: left;
-        }
+    }
+
+    &__text {
+      max-width: 50%;
+      padding: 0;
+
+      &--right {
+        float: right;
       }
+
+      &--left {
+        float: left;
+      }
+    }
   }
 }
 
 @media only screen and (min-width: $bp-xl) {
-  .textBox {
-    display: block;
-    max-width: 70%;
-    margin: 0 auto;
-  }
   .pantry {
     max-width: 70%;
     margin: 100px auto;
+
     &__img {
       max-width: 40%;
     }
