--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 
 @import './components/buttons';
 @import './components/slider';
+@import './components/blog';
 @import './components/textBox';
 @import './components/paragraph';
 
