--- a/src/scss/pages/_mythsbusted.scss
+++ b/src/scss/pages/_mythsbusted.scss
@@ -6,12 +6,12 @@ h1{
     text-align: center;
 }
 
-h3{
-    border-style: groove;
-    border-radius: 5px;
-    border-left-width: 10%;
-    border-color: #0EC99D;
-}
+// h3{
+//     border-style: groove;
+//     border-radius: 5px;
+//     border-left-width: 10%;
+//     border-color: #0EC99D;
+// }
 .myth1{
     padding-left: 20%;
     padding-right:20%;
