--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -346,13 +346,14 @@ body {
   height: 0;
   clear: both; }
 
-.blog__title {
-  color: #616770;
-  text-align: center; }
-
-.blog__author {
-  text-align: center;
-  margin-bottom: 50px; }
+.blog {
+  padding-bottom: 50px; }
+  .blog__title {
+    color: #616770;
+    text-align: center; }
+  .blog__author {
+    text-align: center;
+    margin-bottom: 50px; }
 
 .container {
   width: 90%;
@@ -2443,112 +2444,251 @@ body {
     margin-top: -8%;
     margin-left: 35%; } }
 
-.MythsBusted {
-  padding-left: 5%;
-  padding-right: 5%; }
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
+  @media only screen and (min-width: 540px) {
+    .container {
+      width: 90%; } }
+  @media only screen and (min-width: 769px) {
+    .container {
+      width: 90%; } }
+  @media only screen and (min-width: 960px) {
+    .container {
+      width: 85%; } }
+  @media only screen and (min-width: 1200px) {
+    .container {
+      width: 80%; } }
 
-h1 {
-  text-align: center; }
-
-.myth1 {
-  padding-left: 20%;
-  padding-right: 20%; }
-
-.myth2 {
-  padding-left: 20%;
-  padding-right: 20%; }
-
-.author {
-  text-align: center; }
-
-.slideshow-container {
-  max-width: 1000px;
-  position: center;
-  margin: auto; }
-
-.mySlides {
-  display: none;
-  position: center;
-  overflow: hidden; }
-
-.mySlides:first-of-type {
-  display: block; }
-
-.prev {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none; }
-
-.next {
-  cursor: pointer;
+.row {
   position: relative;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  right: 0;
-  border-radius: 0 3px 3px 0;
-  user-select: none; }
+  width: 100%; }
 
-.prev:hover, .next:hover {
-  background-color: rgba(0, 0, 0, 0.8); }
+.row [class^="col"] {
+  float: left;
+  margin: 0.5rem 1%;
+  min-height: 0.125rem;
+  padding: 0 1%; }
 
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center; }
+.row::after {
+  content: "";
+  display: table;
+  clear: both; }
 
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0; }
+.col {
+  width: 96%; }
 
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease; }
+.col-1 {
+  width: 4.33333%; }
 
-.active, .dot:hover {
-  background-color: #717171; }
+.col-2 {
+  width: 12.66667%; }
 
-.fade {
+.col-3 {
+  width: 21%; }
+
+.col-4 {
+  width: 29.33333%; }
+
+.col-5 {
+  width: 37.66667%; }
+
+.col-6 {
+  width: 46%; }
+
+.col-7 {
+  width: 54.33333%; }
+
+.col-8 {
+  width: 62.66667%; }
+
+.col-9 {
+  width: 71%; }
+
+.col-10 {
+  width: 79.33333%; }
+
+.col-11 {
+  width: 87.33333%; }
+
+.col-12 {
+  width: 96%; }
+
+@media only screen and (min-width: 540px) {
+  .col-sm {
+    width: 96%; }
+  .col-1-sm {
+    width: 4.33333%; }
+  .col-2-sm {
+    width: 12.66667%; }
+  .col-3-sm {
+    width: 21%; }
+  .col-4-sm {
+    width: 29.33333%; }
+  .col-5-sm {
+    width: 37.66667%; }
+  .col-6-sm {
+    width: 46%; }
+  .col-7-sm {
+    width: 54.33333%; }
+  .col-8-sm {
+    width: 62.66667%; }
+  .col-9-sm {
+    width: 71%; }
+  .col-10-sm {
+    width: 79.33333%; }
+  .col-11-sm {
+    width: 87.33333%; }
+  .col-12-sm {
+    width: 96%; } }
+
+@media only screen and (min-width: 769px) {
+  .col-md {
+    width: 96%; }
+  .col-1-md {
+    width: 4.33333%; }
+  .col-2-md {
+    width: 12.66667%; }
+  .col-3-md {
+    width: 21%; }
+  .col-4-md {
+    width: 29.33333%; }
+  .col-5-md {
+    width: 37.66667%; }
+  .col-6-md {
+    width: 46%; }
+  .col-7-md {
+    width: 54.33333%; }
+  .col-8-md {
+    width: 62.66667%; }
+  .col-9-md {
+    width: 71%; }
+  .col-10-md {
+    width: 79.33333%; }
+  .col-11-md {
+    width: 87.33333%; }
+  .col-12-md {
+    width: 96%; } }
+
+@media only screen and (min-width: 960px) {
+  .col-lg {
+    width: 96%; }
+  .col-1-lg {
+    width: 4.33333%; }
+  .col-2-lg {
+    width: 12.66667%; }
+  .col-3-lg {
+    width: 21%; }
+  .col-4-lg {
+    width: 29.33333%; }
+  .col-5-lg {
+    width: 37.66667%; }
+  .col-6-lg {
+    width: 46%; }
+  .col-7-lg {
+    width: 54.33333%; }
+  .col-8-lg {
+    width: 62.66667%; }
+  .col-9-lg {
+    width: 71%; }
+  .col-10-lg {
+    width: 79.33333%; }
+  .col-11-lg {
+    width: 87.33333%; }
+  .col-12-lg {
+    width: 96%; } }
+
+@media only screen and (min-width: 1200px) {
+  .col-xl {
+    width: 96%; }
+  .col-1-xl {
+    width: 4.33333%; }
+  .col-2-xl {
+    width: 12.66667%; }
+  .col-3-xl {
+    width: 21%; }
+  .col-4-xl {
+    width: 29.33333%; }
+  .col-5-xl {
+    width: 37.66667%; }
+  .col-6-xl {
+    width: 46%; }
+  .col-7-xl {
+    width: 54.33333%; }
+  .col-8-xl {
+    width: 62.66667%; }
+  .col-9-xl {
+    width: 71%; }
+  .col-10-xl {
+    width: 79.33333%; }
+  .col-11-xl {
+    width: 87.33333%; }
+  .col-12-xl {
+    width: 96%; } }
+
+.mythbusted-article {
+  margin: 100px auto; }
+  .mythbusted-article__title {
+    text-align: center;
+    border-style: groove;
+    border-radius: 5px;
+    border-left-width: 10%;
+    border-color: #0EC99D;
+    max-width: 70%;
+    margin: 0 auto 40px;
+    padding: 10px; }
+  .mythbusted-article__text {
+    max-width: 60%;
+    margin: 0 auto; }
+
+.mythbusted-slider {
+  max-width: 80%;
+  margin: 0 auto 30px;
+  position: relative; }
+  .mythbusted-slider__slide {
+    display: none;
+    position: center;
+    overflow: hidden; }
+    .mythbusted-slider__slide:first-of-type {
+      display: block; }
+  .mythbusted-slider__counter {
+    color: #616770;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: -50px;
+    right: 0; }
+  .mythbusted-slider__dots {
+    text-align: center; }
+  .mythbusted-slider__dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #ebf1f0;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease; }
+    .mythbusted-slider__dot:hover {
+      background-color: #616770; }
+    .mythbusted-slider__dot--active {
+      background-color: #616770; }
+
+.mythbusted-slider__fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s; }
 
-@-webkit-keyframes fade {
+@-webkit-keyframes mythbusted-slider__fade {
   from {
-    opacity: .4; }
+    opacity: 0.4; }
   to {
     opacity: 1; } }
 
-@keyframes fade {
+@keyframes mythbusted-slider__fade {
   from {
-    opacity: .4; }
+    opacity: 0.4; }
   to {
     opacity: 1; } }
